test/files/neg/t12159/s.scala
//> using jvm 17+

package p

class S extends H {
}

trait T extends I {
}
